--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "3",
-    "jquery": "^3.3.1"
+    "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
