--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
